# SwagDigitClassifier3000

./: .gitignore  Dockerfile  README.md  add_model_to_store.py  app.py  digits_par_jean-michel_version_0.3b.ipynb  docker-compose.yaml  prometheus.yml  pyproject.toml  requirements.txt  retrain.py
templates/: index.html
