[project]
name = "swagdigitclassifier3000"
version = "0.1.0"
description = "swagdigitclassifier3000 packages"
authors = [
    {name = "LNWatta",email = "helene.finot@le-campus-numerique.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
